# MeowToDo

./: .gitignore  README.md  fix_main_listeners.py  fix_todo_panel.py  package.json  pnpm-lock.yaml  vite.config.ts  write_main.py  write_taskbar.js  write_taskbar.py
src/: App.vue  write_vue.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/ai/: mod.rs  service.rs  settings.rs  task_decomposition.rs
src-tauri/src/analytics/: mod.rs  models.rs  service.rs
src-tauri/src/database/: commands.rs  daily_report.rs  db.rs  mod.rs  models.rs
src-tauri/src/plugins/window/src/commands/: mod.rs
src/components/report-export/: index.vue
src/components/task-panel/: index.vue
src/composables/: useAppMenu.ts  useTaskPosition.ts
src/constants/: index.ts
src/locales/: en-US.json  pt-BR.json  vi-VN.json  zh-CN.json  zh-TW.json
src/pages/analytics/: index.vue
src/pages/daily-report/: index.vue
src/pages/main/: index.vue
src/pages/preference/: index.vue
src/pages/preference/components/ai/: index.vue
src/pages/preference/components/cat/: index.vue
src/pages/preference/components/general/: index.vue
src/pages/task-dropdown/: index.vue
src/pages/todo/: index.vue
src/plugins/: window.ts
src/router/: index.ts
src/services/ai/: index.ts
src/services/analytics/: index.ts
src/stores/: cat.ts  dailyReport.ts  todo.ts
