[package]
name = "bongo-cat"
version = "1.1.0"
description = "A Tauri App"
authors = [ "ayangweb" ]
edition = "2024"

[lib]
name = "bongo_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["tray-icon", "protocol-asset", "macos-private-api", "image-png"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri-plugin-custom-window.workspace = true
tauri-plugin-admin-status.workspace = true
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-pinia = "3"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-prevent-default = "1"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-macos-permissions = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
fs_extra = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-locale = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rdev = { git = "https://github.com/kunkunsh/rdev" }
gilrs = { git = "https://github.com/ayangweb/gilrs", default-features = false, features = ["xinput"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel.workspace = true

[features]
cargo-clippy = []
